plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.11-SNAPSHOT'
}

group = 'com.mikeoertli'
version = '0.1.0-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

javafx {
    version = "17.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
    mainClassName = 'com.mikeoertli.rangeselector.demo.javafx.ThirdPartyFxApp'
}

dependencies {
    implementation("org.springframework.boot:spring-boot-devtools")

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

//compileJava {
//    doFirst {
//        options.compilerArgs = [
//                '--module-path', classpath.asPath,
//                '--add-modules', 'javafx.controls,javafx.fxml'
//        ]
//    }
//}

//mainClassName = 'com.mikeoertli.rangeselector.demo.javafx.ThirdPartyFxApp'

//run {
//    doFirst {
//        jvmArgs = [
//                '--module-path', classpath.asPath,
//                '--add-modules', 'javafx.controls,javafx.fxml'
//        ]
//    }
//}
